fixed header z-index and filled timestamps for all thumbnails

--- a/styles/header.css
+++ b/styles/header.css
@@ -9,6 +9,7 @@
   top: 0px;
   right: 0px;
   left: 0px;
+  z-index: 100;
 
   background-color: white;
   border-bottom-width: 1px;
